--- a/doc/meta/_Bibliography.tex
+++ b/doc/meta/_Bibliography.tex
@@ -13,20 +13,20 @@
 % http://mirror.ctan.org/biblio/bibtex/contrib/doc/
 % The IEEEtran BibTeX style support page is at:
 % http://www.michaelshell.org/tex/ieeetran/bibtex/
-%\bibliographystyle{IEEEtran}
+\bibliographystyle{meta/IEEEtran}
 % argument is your BibTeX string definitions and bibliography database(s)
-%\bibliography{IEEEabrv,../bib/paper}
+\bibliography{meta/_bibi}
 %
 % <OR> manually copy in the resultant .bbl file
 % set second argument of \begin to the number of references
 % (used to reserve space for the reference number labels box)
-\begin{thebibliography}{1}
-
-\bibitem{grappa:nelson}
-J.~Nelson, B.~Holt, B.~Myers, P.~Briggs, L.~Ceze, S.~Kahan and M.~Oskin.
- (2014, April) 
- \emph{Grappa: A Latency-Tolerant Runtime for Large-Scale Irregular Applications}.
- [Online].
- Available: http://grappa.io/
-\end{thebibliography}
+%\begin{thebibliography}{1}
+%
+%\bibitem{grappa:nelson}
+%J.~Nelson, B.~Holt, B.~Myers, P.~Briggs, L.~Ceze, S.~Kahan and M.~Oskin.
+% (2014, April) 
+% \emph{Grappa: A Latency-Tolerant Runtime for Large-Scale Irregular Applications}.
+% [Online].
+% Available: http://grappa.io/
+%\end{thebibliography}
 
