very next to IEEE

--- a/doc/_template.tex
+++ b/doc/_template.tex
@@ -421,9 +421,14 @@
 
 % --------------------------------------------------------------------------
 
+
+\begin{IEEEkeywords}
+simulation, robots, ants, bugs
+\end{IEEEkeywords}
+
 \input{meta/content.tex}
 
-\input{meta/_Acknowledgment.tex}
+%\input{meta/_Acknowledgment.tex}
 
 \input{meta/_Bibliography.tex}
 
