ieee doc: keywords added

--- a/doc/_template.tex
+++ b/doc/_template.tex
@@ -422,8 +422,9 @@
 % --------------------------------------------------------------------------
 
 
+% use the taxonomy data of IEEE for the keywords
 \begin{IEEEkeywords}
-simulation, robots, ants, bugs
+multi-robot systems, simulation, signal analysis, pheromones, insects
 \end{IEEEkeywords}
 
 \input{meta/content.tex}
