--- a/doc/meta/_Header.tex
+++ b/doc/meta/_Header.tex
@@ -18,12 +18,7 @@
 \IEEEauthorblockA{Heinrich-Heine-Universität Düsseldorf\\
 Institut für Informatik\\
 40225 Düsseldorf, Germany\\
-Email: jochen.peters@hhu.de}
-\and
-\IEEEauthorblockN{Homer Simpson}
-\IEEEauthorblockA{Twentieth Century Fox\\
-Springfield, USA\\
-Email: homer@thesimpsons.com}}
+Email: jochen.peters@hhu.de}}
 
 
 % conference papers do not typically use \thanks and this command
