share the tex and ps file is not wrong. Adding some hints to other simulation concepts and adding ref to bee stuff. note, how a bee algorithm works

--- a/doc/meta/_bibi.bib
+++ b/doc/meta/_bibi.bib
@@ -87,3 +87,29 @@
   author={Gonzalez, Francisco},
   year={2017}
 }
+
+@incollection{pham2006bees,
+  title={-The Bees Algorithm—A Novel Tool for Complex Optimisation Problems},
+  author={Pham, Duc Truong and Ghanbarzadeh, Afshin and Ko{\c{c}}, Ebubekir and Otri, Sameh and Rahim, S and Zaidi, Muhamad},
+  booktitle={Intelligent Production Machines and Systems},
+  pages={454--459},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@inproceedings{pham2007data,
+  title={Data clustering using the bees algorithm},
+  author={Pham, DT and Otri, S and Afify, A and Mahmuddin, Massudi and Al-Jabbouli, H},
+  booktitle={40th CIRP International Manufacturing Systems Seminar},
+  year={2007}
+}
+
+@article{guney2007amplitude,
+  title={Amplitude-only pattern nulling of linear antenna arrays with the use of bees algorithm},
+  author={Guney, Kerim and Onay, Murat},
+  journal={Progress In Electromagnetics Research},
+  volume={70},
+  pages={21--36},
+  year={2007},
+  publisher={EMW Publishing}
+}
