--- a/doc/_template.tex
+++ b/doc/_template.tex
@@ -96,6 +96,7 @@
 % *** CITATION PACKAGES ***
 %
 \usepackage{cite}
+\usepackage{hyperref}
 % cite.sty was written by Donald Arseneau
 % V1.6 and later of IEEEtran pre-defines the format of the cite.sty package
 % \cite{} output to follow that of the IEEE. Loading the cite package will
@@ -308,6 +309,9 @@
 
 % correct bad hyphenation here
 \hyphenation{op-tical net-works semi-conduc-tor}
+
+\providecommand{\tightlist}{%
+  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 
 \begin{document}
 
