versuch einer Einleitung in deutsch.

--- a/doc/meta/_bibi.bib
+++ b/doc/meta/_bibi.bib
@@ -113,3 +113,41 @@
   year={2007},
   publisher={EMW Publishing}
 }
+
+@article{pbio37,
+    author = {Delsuc, Frédéric},
+    journal = {PLOS Biology},
+    publisher = {Public Library of Science},
+    title = {Army Ants Trapped by Their Evolutionary History},
+    year = {2003},
+    month = {11},
+    volume = {1},
+    url = {https://doi.org/10.1371/journal.pbio.0000037},
+    pages = {},
+    abstract = {A phylogenetic study of army ants has completely changed our view of their evolutionary history, including the origin of the curious and fatal phenomenon known as circular mill formation.},
+    number = {2},
+    doi = {10.1371/journal.pbio.0000037}
+}
+
+@article{Couzin139,
+    author = {Couzin, I. D. and Franks, N. R.},
+    title = {Self-organized lane formation and optimized traffic flow in army ants},
+    volume = {270},
+    number = {1511},
+    pages = {139--146},
+    year = {2003},
+    doi = {10.1098/rspb.2002.2210},
+    publisher = {The Royal Society},
+    abstract = {We show how the movement rules of individual ants on trails can lead to a collective choice of direction and the formation of distinct traffic lanes that minimize congestion. We develop and evaluate the results of a new model with a quantitative study of the behaviour of the army ant Eciton burchelli. Colonies of this species have up to 200 000 foragers and transport more than 3000 prey items per hour over raiding columns that exceed 100 m. It is an ideal species in which to test the predictions of our model because it forms pheromone trails that are densely populated with very swift ants. The model explores the influences of turning rates and local perception on traffic flow. The behaviour of real army ants is such that they occupy the specific region of parameter space in which lanes form and traffic flow is maximized.},
+    issn = {0962-8452},
+    URL = {http://rspb.royalsocietypublishing.org/content/270/1511/139},
+    eprint = {http://rspb.royalsocietypublishing.org/content/270/1511/139.full.pdf},
+    journal = {Proceedings of the Royal Society of London B: Biological Sciences}
+}
+
+@book{schneirla1944unique,
+  title={A unique case of circular milling in ants, considered in relation to trail following and the general problem of orientation},
+  author={Schneirla, Theodore Christian},
+  year={1944},
+  publisher={American Museum of Natural History}
+}
