--- a/doc/_template.tex
+++ b/doc/_template.tex
@@ -425,15 +425,9 @@
 
 % --------------------------------------------------------------------------
 
-
-% use the taxonomy data of IEEE for the keywords
-\begin{IEEEkeywords}
-multi-robot systems, simulation, signal analysis, pheromones, insects
-\end{IEEEkeywords}
-
 \input{meta/content.tex}
 
-%\input{meta/_Acknowledgment.tex}
+%%\input{meta/_Acknowledgment.tex}
 
 \input{meta/_Bibliography.tex}
 
