--- a/doc/meta/_Header.tex
+++ b/doc/meta/_Header.tex
@@ -6,7 +6,7 @@
 % Do not put math or special symbols in the title.
 
 
-\title{Simulate Bug Algorithm}
+\title{Lightweight Ant Algorithm with Ant Mill Protection}
 
 
 % author names and affiliations
