--- a/doc/meta/_bibi.bib
+++ b/doc/meta/_bibi.bib
@@ -151,3 +151,90 @@
   year={1944},
   publisher={American Museum of Natural History}
 }
+
+@article{zuse1a3,
+    author={R. Rojas},
+    journal={IEEE Annals of the History of Computing},
+    title={Konrad Zuse's legacy: the architecture of the Z1 and Z3},
+    year={1997},
+    volume={19},
+    number={2},
+    pages={5-16},
+    keywords={calculating apparatus;computer architecture;floating point arithmetic;history;punched tape equipment;Konrad Zuse;Z1 computer;Z3 computer;arithmetical operations;computer architecture;computing machines;electromechanical relays;floating-point numbers;historical perspective;machine logical structure;mechanical components;memory;patent application;processor;programming model;sequentially-read punched tape;software simulation;square root;Application software;Automata;Civil engineering;Computational modeling;Computer aided instruction;Computer architecture;Educational institutions;Electron tubes;Logic programming;Relays},
+    doi={10.1109/85.586067},
+    ISSN={1058-6180},
+    month={Apr}
+}
+
+@article{opticalNand,
+    title = "All optical NAND gate based on nonlinear photonic crystal ring resonator",
+    journal = "Information Processing in Agriculture",
+    volume = "3",
+    number = "2",
+    pages = "119 - 123",
+    year = "2016",
+    issn = "2214-3173",
+    doi = "https://doi.org/10.1016/j.inpa.2016.04.002",
+    url = "http://www.sciencedirect.com/science/article/pii/S2214317315300226",
+    author = "Somaye Serajmohammadi and Hassan Absalan",
+    keywords = "Photonic crystal, NAND gate, Band gap"
+}
+
+@article{molekularAdd,
+    author = {Prasanna de Silva, A. and McClenaghan, Nathan D.},
+    title = {Proof-of-Principle of Molecular-Scale Arithmetic},
+    journal = {Journal of the American Chemical Society},
+    volume = {122},
+    number = {16},
+    pages = {3965-3966},
+    year = {2000},
+    doi = {10.1021/ja994080m},
+    URL = "https://doi.org/10.1021/ja994080m",
+    eprint = "https://doi.org/10.1021/ja994080m"
+}
+
+@article{molekularAnd,
+    author = {Magri, David C. and Brown, Gareth J. and McClean, Gareth D. and de Silva, A. Prasanna},
+    title = {Communicating Chemical Congregation:  A Molecular AND Logic Gate with Three Chemical Inputs as a “Lab-on-a-Molecule” Prototype},
+    journal = {Journal of the American Chemical Society},
+    volume = {128},
+    number = {15},
+    pages = {4950-4951},
+    year = {2006},
+    doi = {10.1021/ja058295+},
+    note ={PMID: 16608318},
+    URL = "https://doi.org/10.1021/ja058295+",
+    eprint = "https://doi.org/10.1021/ja058295+"
+}
+
+@article{natureMolMasch,
+  title={Stereodivergent synthesis with a programmable molecular machine},
+  author={Kassem, Salma and Lee, Alan TL and Leigh, David A and Marcos, Vanesa and Palmer, Leoni I and Pisano, Simone},
+  journal={Nature},
+  volume={549},
+  number={7672},
+  pages={374},
+  year={2017},
+  URL={http://dx.doi.org/10.1038/nature23677},
+  publisher={Nature Publishing Group}
+}
+
+@article{jones2004soft,
+  title={Soft machines: nanotechnology and life},
+  author={Jones, Richard Anthony Lewis},
+  year={2004},
+  publisher={Oxford University Press}
+}
+
+@article{nanodevices,
+    author = {Balzani Vincenzo and Credi Alberto and Raymo Françisco M. and Stoddart J. Fraser},
+    title = {Artificial Molecular Machines},
+    journal = {Angewandte Chemie International Edition},
+    volume = {39},
+    number = {19},
+    pages = {3348-3391},
+    keywords = {catenanes, molecular machines, nanodevices, photochemistry, rotaxanes, supramolecular chemistry},
+    doi = {10.1002/1521-3773(20001002)39:19<3348::AID-ANIE3348>3.0.CO;2-X},
+    url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/1521-3773%2820001002%2939%3A19%3C3348%3A%3AAID-ANIE3348%3E3.0.CO%3B2-X},
+    eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/1521-3773%2820001002%2939%3A19%3C3348%3A%3AAID-ANIE3348%3E3.0.CO%3B2-X}
+}
