--- a/doc/meta/_Abstract.tex
+++ b/doc/meta/_Abstract.tex
@@ -1,7 +1,26 @@
 % As a general rule, do not put math, special symbols or citations
 % in the abstract
 \begin{abstract}
-The abstract goes here.
+Molecular machines, optical digital processing units and analogue computers
+with a pneumatic logical unit are able to work in special environments, where
+modern micro controllers are too large, use too much electric energy or are
+not resistant to massive electromagnetic forces. Many of these techniques are
+unable to use wireless communication, unable to store big data sizes or
+do millions instructions of a complex algorithm.
+If you want to solve a big problem with it, you have to solve it in a 
+collective opportunistic way with a simple logic for each unit. We concentrated
+on the ant algorithm to find and collect food. This algorithm use pheromones
+and the environment to control and communicate to each unit (ant). We found out,
+that simulating a simple implementation of this algorithm leads to ant mills and
+high frequented routes to empty food areas. In contrast to bees, the
+simulated ants did not split into a searching and a collecting behavior in
+that case. In this paper we present a small modification of the ant
+algorithm to protect a swarm from collective misconduct. We show, how
+successful this modification is and compare this concept to
+nature and other ant algorithm simulations.
 \end{abstract}
 
-% no keywords
+% use the taxonomy data of IEEE for the keywords
+\begin{IEEEkeywords}
+multi-robot systems, simulation, pheromones, insects
+\end{IEEEkeywords}
