--- a/doc/meta/content.tex
+++ b/doc/meta/content.tex
@@ -1,5 +1,27 @@
 \section{Introduction (not ready)}\label{introduction-not-ready}
 
+Raketensteuerungen von Atombomben werden oft von pneumatischen
+(Staubsaugermotoren und Klappen wie bei Zuse I) oder hydraulischen
+Systemen betrieben, damit sie bei einem elektromagnitischen Impuls einer
+anderen Bombe noch weiter funktionieren. In der Atmospähre eines anderen
+Planeten könnte eine Elektronik z.B. wegen der starken statischen Ladung
+des Marsstaubs ähnliche Probleme verursachen. Unter Wasser oder in einem
+sandigem Medium können GPS und Funkwellen kaum bis gar nicht genutzt
+werden. Schaut man sich aktuelle Nanotechnologien an, so werden
+chemische Botenstoffe zur Auslösung bestimmter Reaktionen,
+interessanter, als mit Funktechnik Roboter in unserer Blutbahn
+kommunizieren zu lassen. In der Natur werden bereits Hormone (und keine
+Funkwellen) als Kommunikation eingesetzt. Sollte man chemische Propeller
+an Makromolekülen bilden oder betreiben, die durch eine chemische
+Reaktion aufgrund einer bestimmten Konzentration eines künstlichen
+Hormons an der Stelle des Moleküls, an dem der Propeller sitzt, so sind
+logische Operationen oder gar Speichermedien in einem Molekül begrenzt.
+Durch künstliche Methabolismen eine turingvollständige Sprache bilden,
+die als Eingabe Konzentrationen von bestimmten Molekülen akzeptiert und
+gleiches als Ausgabemedium zur Steuerung einer molekularen Struktur
+erzeugt, mag heute noch nach Science Fiction klingen - findet aber
+bereits in Laboren statt. (todo: hier fehlt mir noch eine Referenz)
+
 In contrast to bees, the simulated ants did not split into a searching
 and a collecting behavior in that case.
 
@@ -39,28 +61,6 @@ Veränderung der Daten Aufgrund von Bewegungen. Schaut man sich in der
 Literatur die Ant-Algorithmen im Detail an, so wird der Erfolg einer
 Ameisen-Kolonie bei gewählten Parametern, die das Legen der Duftspuren
 und deren ``Verwitterung'' beeinflussen, kaum behandelt.
-
-Raketensteuerungen von Atombomben werden oft von pneumatischen
-(Staubsaugermotoren und Klappen wie bei Zuse II) oder hydraulischen
-Systemen betrieben, damit sie bei einem elektromagnitischen Impuls einer
-anderen Bombe noch weiter funktionieren. In der Atmospähre eines anderen
-Planeten könnte eine Elektronik z.B. wegen der starken statischen Ladung
-des Marsstaubs ähnliche Probleme verursachen. Unter Wasser oder in einem
-sandigem Medium können GPS und Funkwellen kaum bis gar nicht genutzt
-werden. Schaut man sich aktuelle Nanotechnologien an, so werden
-chemische Botenstoffe zur Auslösung bestimmter Reaktionen,
-interessanter, als mit Funktechnik Roboter in unserer Blutbahn
-kommunizieren zu lassen. In der Natur werden bereits Hormone (und keine
-Funkwellen) als Kommunikation eingesetzt. Sollte man chemische Propeller
-an Makromolekülen bilden oder betreiben, die durch eine chemische
-Reaktion aufgrund einer bestimmten Konzentration eines künstlichen
-Hormons an der Stelle des Moleküls, an dem der Propeller sitzt, so sind
-logische Operationen oder gar Speichermedien in einem Molekül begrenzt.
-Durch künstliche Methabolismen eine turingvollständige Sprache bilden,
-die als Eingabe Konzentrationen von bestimmten Molekülen akzeptiert und
-gleiches als Ausgabemedium zur Steuerung einer molekularen Struktur
-erzeugt, mag heute noch nach Science Fiction klingen - findet aber
-bereits in Laboren statt. (todo: hier fehlt mir noch eine Referenz)
 
 \section{Related Work (not ready)}\label{related-work-not-ready}
 
